--- a/config/example.yaml
+++ b/config/example.yaml
@@ -9,10 +9,10 @@ client:
     host: "auth-api"
     port: 1010
     timeout: 3s
-    use_tls: true
+    use_tls: false
 
   servers_api:
     host: "servers-api"
-    port: 1011
+    port: 1020
     timeout: 3s
-    use_tls: true
+    use_tls: false
